# smart-code-review

./: Dockerfile  README.md  app.py  environment.py  grader.py  inference.py  openenv.yaml  pyproject.toml  timepenalty.py
server/: app.py
